# ThisIsMe

./: .gitignore  CHANGELOG.md  Dockerfile  DockerfileDev  DockerfileRelease  README.md  ThisIsMe.cabal  stack.yaml
.devcontainer/: Dockerfile  devcontainer.json
app/: Main.hs
public/: stylesheet.css
public/projects/: Arrow  Cosmonaut  Delta Stepping  Hawk Dove  Pathtracer  ThisIsMe
src/: HelperMethods.hs  JsonRemappings.hs  JsonTypes.hs  Main.hs  about.html  home.html  projects.html  stack.html
src/pages/: About.hs  Home.hs  Photography.hs  Projects.hs  Ruben.hs  Stack.hs
