cabal-version:      2.4
name:               ThisIsMe
version:            1.0.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable ThisIsMe
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Home, Projects, Photography, HelperMethods, Ruben

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      mtl,
                      scotty >= 0.21,
                      wai-extra,
                      text,
                      blaze-html,
                      blaze-markup,
                      wai-middleware-static,
                      directory,
                      filepath,
                      MissingH
    hs-source-dirs:   src, src/pages
    default-language: Haskell2010
    ghc-options: -Wall -O2
